# Pet_health_checker0

./: README.md
backend/: .env  .gitignore  app.py  cv_model.py  database.py  history.json  main.py  pets.db  pyproject.toml  requirements.txt
backend/data/: pet_dataset.json
backend/models/: ai_model.py
backend/routes/: analyze.py  chat.py  history.py
backend/utils/: pet_rules.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: Chatbox.jsx  Navbar.jsx  PetForm.jsx
frontend/src/pages/: Dashboard.jsx  Home.jsx  PetProfile.jsx  Signup.jsx  login.jsx
frontend/src/services/: api.js
